# image-processing

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/TinyConv/: tinyconv.onnx  tinyconv.onnx.data  tinyconv.pth
eigen/: data.py  metrics.py  plotting.py  trainer.py
examples/: deep_image_prior_example.ipynb  deep_image_prior_example.py  tiny_conv_example.ipynb  tiny_conv_example.py
mnist/: main.py  metrics.py  miniconv.py  tinyconv.py  trainer.py  utils.py
mnist/utils/: data.py  plotting.py
models/: deep_image_prior.py  tiny_conv.py
tests/: test_data.py
