[project]
name = "image-processing"
version = "0.1.0"
description = "package for image processing with deep learning, using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
# module root for the package when building/installing the project
module-root = ""
# the top-level module name for the package
module-name = "eigen"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true
